test/trivial/deitz/test_config_use_before_decl.good
Error: Variable 'x' used before defined (test_config_use_before_decl.chpl:1)
